x/contracts/sdk-macros/tests/ui/fail/state-schema-with-padding-in-key.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
 --> tests/ui/fail/state-schema-with-padding-in-key.rs:7:5
  |
7 |     Key(u16, u8) => u8,
  |     ^^^
  |
  = note: source type: `Key` (32 bits)
  = note: target type: `_::{closure#0}::TypeWithoutPadding` (24 bits)
